# controllers/teacher.controller.js
@@ -326,30 +326,6 @@ export const getMyApplications = async (req, res) => {
     return res.status(500).json({ error: "Internal server error" });
   }
 };
-export const getAssignedStudents = async (req, res) => {
-  try {
-    const { teacherId } = req.query;
-
-    const students = await prisma.assignedTeacherStudent.findMany({
-      where: {
-        teacherId: Number(teacherId),
-      },
-      distinct: ["studentId"],
-      select: {
-        student: {
-          select: { id: true, name: true, email: true, contact: true },
-        },
-      },
-    });
-
-    const result = students.map((s) => ({ user: s.student }));
-
-    return res.status(200).json(result);
-  } catch (error) {
-    console.log("Error in getAssignedStudents", error);
-    return res.status(500).json({ error: "Internal server error" });
-  }
-};
 
 export const findTeacherApplicationStatusCounts = async (req, res) => {
   try {
